# am-github-artifact-webhook

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.yaml  db.py  pyproject.toml  reconciler.py  releases.py  test_webhook.py  verify_symbols.py
.github/workflows/: ci.yml
