[project]
name = "github-artifact-webhook"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.44.0",
    "requests>=2.32.0",
    "symstore==0.3.5",
    "pydantic-settings[yaml]>=2.13.1",
    "apscheduler>=3.10",
    "pymysql>=1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.0a1",
]

[tool.uv]
package = false
